<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white_shade"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/firstLinearL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <!-- Login Label Structure -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textSize="@dimen/login_label_size"
            android:layout_marginTop="@dimen/login_label_top_margin"
            android:layout_marginStart="@dimen/common_start_margin"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semi_bold"
            >
        </TextView>


    </LinearLayout>
    <View
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:background="@drawable/big_circle_corners"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="-50dp"
        >

    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/second_relative_layout_top_margin">
        <View
            android:id="@+id/smallCircle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/big_circle_corners"
            android:layout_marginLeft="-20dp">
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/second_layout_corners"
            android:layout_below="@+id/smallCircle">

            <!-- Email Label & Text Structure -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textSize="@dimen/common_login_page_labels_size"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/login_label_top_margin"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin"

                >
            </TextView>

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColorHint="@android:color/darker_gray"
                android:background="@null"
                android:textCursorDrawable="@drawable/cursor"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/common_login_page_labels_top_margin"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin"
                >
            </EditText>
            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_marginTop="4dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin">



            </View>

            <!-- Password Label & Text Structure -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pass"
                android:textSize="@dimen/common_login_page_labels_size"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/login_label_top_margin"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin"
                >
            </TextView>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@color/black"
                android:background="@null"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/pass_hint"
                android:layout_marginTop="@dimen/common_login_page_labels_top_margin"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin"

                >
            </EditText>

            <View
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_marginTop="4dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin">

            </View>

            <!-- Checkbox Structure -->
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_text"
                android:textColor="@android:color/darker_gray"
                android:buttonTint="@android:color/darker_gray"
                android:layout_marginTop="@dimen/common_login_page_labels_top_margin"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin"
                >
            </CheckBox>

            <!-- Button Structure -->
            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_label_top_margin"
                android:text="@string/btn_text"
                android:background="@drawable/button_corners"
                android:textSize="@dimen/common_login_page_labels_size"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_marginStart="@dimen/common_end_margin"
                android:layout_marginEnd="@dimen/common_end_margin"
                android:textColor="@color/white"
                android:textAllCaps="false"
                >
            </Button>

            <!-- Register Link Structure -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/register_top_margin"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/register_question_text"
                    android:textSize="@dimen/register_text_size"
                    android:fontFamily="@font/poppins_semi_bold"
                    >
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_link_text"
                    android:layout_marginLeft="@dimen/register_left_margin"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/register_text_size"
                    android:fontFamily="@font/poppins_semi_bold"
                    >
                </TextView>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>