<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobDetailsFragment">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        >-->
<!--        -->
<!--    </RelativeLayout>-->

    <!--    Top ToolBar-->
    <!--        <RelativeLayout-->
    <!--            android:id="@+id/toolbar"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="100dp"-->
    <!--            android:background="@color/Radial">-->

    <!--            <ImageButton-->
    <!--                android:id="@+id/btnBack"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:src="@drawable/baseline_arrow_back_ios_24"-->
    <!--                android:background="@android:color/transparent"-->
    <!--                android:layout_marginStart="@dimen/_20dp"-->
    <!--                android:layout_alignParentBottom="true"-->
    <!--                android:layout_marginBottom="@dimen/_20dp"/>-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:text="@string/job_details"-->
    <!--                android:textColor="@color/white"-->
    <!--                android:layout_alignParentBottom="true"-->
    <!--                android:layout_centerInParent="true"-->
    <!--                android:layout_marginBottom="@dimen/_20dp"-->
    <!--                android:fontFamily="@font/poppins_semi_bold"-->
    <!--                android:textSize="@dimen/_16sp"/>-->

    <!--        </RelativeLayout>-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_above="@+id/navigationBar"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="100dp"
        android:layout_height="match_parent"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main"
            android:padding="@dimen/_20dp"
            >

            <ImageView
                android:id="@+id/companyImage"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/spacee"
                android:background="@drawable/company_image"
                android:layout_marginTop="@dimen/_20dp"/>

            <ImageView
                android:id="@+id/verified"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@+id/companyImage"
                android:layout_toEndOf="@+id/companyImage"
                android:layout_marginTop="-11dp"
                android:layout_marginStart="-11dp"
                android:src="@drawable/verified"/>

            <TextView
                android:id="@+id/positionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_below="@+id/companyImage"
                android:text="@string/ui_ux_designer"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_4dp"
                android:layout_below="@+id/positionName"
                android:text="@string/elux_space_malang_remote"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12sp"
                android:textColor="@color/gray_scale"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/detailsBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:layout_below="@+id/companyName"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_10dp"
                android:layout_marginHorizontal="1dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_15dp"
                    android:weightSum="4"
                    android:background="@color/white">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/buildingImage"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/buildings"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:id="@+id/employees"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Employees"
                            android:layout_below="@+id/buildingImage"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="10sp"
                            android:textColor="@color/gray_scale"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/employees"
                            android:layout_marginTop="5dp"
                            android:text="@string/_50_100"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sp"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/gray_scale_dark"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/workImage"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/work"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:id="@+id/work"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Job Type"
                            android:layout_below="@+id/workImage"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="10sp"
                            android:textColor="@color/gray_scale"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/work"
                            android:layout_marginTop="5dp"
                            android:text="Part-time"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sp"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/gray_scale_dark"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/levelImage"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/level"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:id="@+id/level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Level"
                            android:layout_below="@+id/levelImage"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="10sp"
                            android:textColor="@color/gray_scale"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/level"
                            android:layout_marginTop="5dp"
                            android:text="Junior"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sp"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/gray_scale_dark"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/SalariesImage"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/dollar_circle"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:id="@+id/Salaries"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Salaries"
                            android:layout_below="@+id/SalariesImage"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="10sp"
                            android:textColor="@color/gray_scale"
                            android:layout_centerHorizontal="true"/>

                        <TextView
                            android:id="@+id/salary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Salaries"
                            android:layout_marginTop="5dp"
                            android:text="$300-500"
                            android:singleLine="true"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sp"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/gray_scale_dark"/>
                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/JobDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_description"
                android:layout_below="@+id/detailsBox"
                android:layout_marginTop="@dimen/_50dp"
                style="@style/JobDetailsTextView"/>

            <TextView
                android:id="@+id/JobDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_descreption"
                android:layout_below="@+id/JobDescription"
                style="@style/JobDescriptionTextView"/>

            <TextView
                android:id="@+id/skillsAndReqirements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_below="@+id/JobDescriptionText"
                android:text="@string/skills_amp_requirements"
                style="@style/JobDetailsTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_descreption2"
                android:fadingEdge="vertical"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="20dp"

                android:layout_below="@+id/skillsAndReqirements"
                style="@style/JobDescriptionTextView"/>
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:padding="@dimen/_20dp"
        android:background="@color/white"
        android:elevation="@dimen/_4dp"
        android:layout_gravity="bottom"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/navigation_bar_save_button"
            android:layout_marginEnd="@dimen/_10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:src="@drawable/bookmark_not_fill"
                android:layout_marginEnd="@dimen/_6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/Radial"
                android:textSize="@dimen/_12sp"
                android:fontFamily="@font/poppins_regular"/>
        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/apply_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:background="@drawable/navigation_bar_apply_button"
            android:layout_weight="2"/>

    </LinearLayout>

</FrameLayout>